--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,10 @@
-<h2><%= current_user.username %></h2>
-
 <h3>Subjects</h3>
 <ul>
   <% current_user.subjects.each do |subject| %>
     <li>
-      <%= link_to(subject.title, subject_url(subject)) %>
-      <!-- <%= button_to "Remove subject", subject_url(subject), method: :delete %> -->
+      <%= link_to(subject.title, "/api/subjects/" + subject.id.to_s) %>
     </li>
   <% end %>
 </ul>
 
-<%= link_to "Add Subject", new_subject_url %>
+<%= link_to "Add Subject", "/api/subjects/new" %>
