--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <li>
             <a href="#"> <i class="fa fa-database fa-lg"></i> My Library</a>
           </li>
-          <li><a href="#"><i class="fa fa-search fa-lg"></i> Market</a></li>
+          <li><a href="#"><i class="fa fa-search fa-lg"></i> Search Stacks</a></li>
           <li><a href="#"><i class="fa fa-area-chart fa-lg"></i> How It Works</a></li>
           <li><a href="#"><i class="fa fa-info-circle fa-lg"></i> About</a></li>
           <li><a href="#"><i class="fa fa-comment-o fa-lg"></i> Blog</a></li>
