--- a/app/assets/stylesheets/subject_nav.css
+++ b/app/assets/stylesheets/subject_nav.css
@@ -1,22 +1,51 @@
+
 .subject-nav {
   float: left;
   width: 200px;
-  border: 1px solid #ccc;
+  border: 4px solid #ccc;
   background: #eeeeee;
 }
+
+/* ADD BAR TO ACTIVATE SUBJECT FORM */
 
 .subject-nav-add {
 /*doesn't exist yet*/
 }
 
+
+/* TOTAL LIST OF SUBJECTS */
+
 .subject-nav-list {
 
 }
 
-.subject-nav-topic {
+/* EACH INDIVIDUAL SUBJECT*/
 
-  border: 1px solid #grey;
+.subject-nav-topic {
+  display: block;
+  /*not working for the border*/
+  border: 2px solid #red;
+  margin-bottom: 10px;
 }
+
+.subject-nav-topic img {
+
+  float: left;
+  display: block;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+.subject-nav-topic h4 {
+  float: left;
+}
+
+.progress-bar {
+  float: right;
+}
+
+/* SUBJECT FORM TO ADD NEW SUBJECT */
 
 .subject-nav-form {
 
