Styling of Subject Details.

--- a/app/assets/stylesheets/subject_nav.css
+++ b/app/assets/stylesheets/subject_nav.css
@@ -1,58 +1,67 @@
+.subject-nav { display:none; }
 
-.subject-nav {
-  float: left;
-  width: 200px;
-  border: 4px solid #ccc;
-  background: #eeeeee;
-}
+@media (min-width: 700px) {
 
-/* ADD BAR TO ACTIVATE SUBJECT FORM */
+  .subject-nav {
+    margin: auto;
+    display: block;
+    float: left;
+    width: 20%;
+    min-width: 200px;
+    max-width: 250px;
+    border: 4px solid #ccc;
+    background: #eeeeee;
+  }
 
-.subject-nav-add {
-/*doesn't exist yet*/
-}
+  /* ADD BAR TO ACTIVATE SUBJECT FORM */
+
+  .subject-nav-add {
+  /*doesn't exist yet*/
+  }
 
 
-/* TOTAL LIST OF SUBJECTS */
+  /* TOTAL LIST OF SUBJECTS */
 
-.subject-nav-list {
+  .subject-nav-list {
 
-}
+  }
 
 
-/* EACH INDIVIDUAL SUBJECT*/
+  /* EACH INDIVIDUAL SUBJECT*/
 
-.subject-nav-list li {
-  border: 2px solid #red;
-}
+  .subject-nav-list li {
+    border: 2px solid #red;
+  }
 
-.subject-nav-topic {
-  display: block;
-  /*not working for the border*/
+  .subject-nav-topic {
+    display: block;
+    /*not working for the border*/
 
-  margin-bottom: 10px;
-}
+    margin-bottom: 10px;
+  }
 
-.subject-nav-topic img {
+  .subject-nav-topic img {
 
-  float: left;
-  display: block;
-  padding: 10px;
-  width: 50px;
-  height: 50px;
-}
+    float: left;
+    display: block;
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+  }
 
-.subject-nav-topic h4 {
-  float: left;
-}
+  .subject-nav-topic h4 {
+    float: left;
+  }
 
-.progress-bar {
-  float: right;
-}
+  .progress-bar {
+    float: right;
+  }
 
-/* SUBJECT FORM TO ADD NEW SUBJECT */
+  /* SUBJECT FORM TO ADD NEW SUBJECT */
 
-.subject-nav-form {
+  .subject-nav-form {
 
-  border: 1px solid black;
+    border: 1px solid black;
+  }
+
 }
