--- a/app/assets/stylesheets/subject_detail.css
+++ b/app/assets/stylesheets/subject_detail.css
@@ -1,11 +1,27 @@
 .subject-detail-main {
   float: left;
   display: block;
+  margin-left: 40px;
+  /*padding-left 40px;*/
 }
 
+.subject-detail-main .title {
+  /*background: white;*/
 
-.subject-detail-main title {
+  width: 500px;
+  font-size: 30px;
+  color: orange;
+  padding: 0 0 30px 0;
+  display: block;
+  border-bottom: 1px solid grey;
 
+}
+
+.subject-detail-main img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  float: left;
 }
 
 .subject-detail-main decklist {
@@ -20,6 +36,13 @@
 
 }
 
-.subject-detail-main deck {
+.subject-detail-main .deck {
+  display: block;
+  padding: 20px;
+  border-bottom: 1px solid grey;
+}
+
+.subject-detail-main .deck:first-child {
+  border-top: 2px solid grey;
 
 }
