Change CSS layouts for UserShow and SubjectDetail.

--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,12 +1,15 @@
 
 footer {
   position: relative;
+  /*position: absolute;
+  bottom: 0px;*/
   /*margin-top: -300px;*/
   margin: auto;
   height: 300px;
   clear: both;
   background-color: #222;
   padding: 40px 0 100px 0;
+
 }
 
 section.footer-wrapper {
