--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -5,11 +5,11 @@
    font-size: 14px;
  }
 
- .header a {
+ .header > a {
    color: grey;
  }
 
- .header a:hover {
+ .header > a:hover {
    color: white;
  }
 
