--- a/app/assets/stylesheets/subject_detail.css
+++ b/app/assets/stylesheets/subject_detail.css
@@ -1,31 +1,30 @@
 .subject-detail-main {
   float: left;
-  display: block;
-  margin-left: 40px;
-  /*padding-left 40px;*/
+  width: 50%;
+  border-right: 1px solid #ccc;
+  margin: 10px;
 }
 
 .subject-detail-main .title {
-  /*background: white;*/
-
-  width: 500px;
-  font-size: 30px;
-  color: orange;
-  padding: 0 0 30px 0;
-  display: block;
-  border-bottom: 1px solid grey;
-
+  /*color: #34495e;*/
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.subject-detail-main img {
-  display: block;
-  width: 100px;
-  height: 100px;
-  float: left;
+.subject-detail-main img { display:none; }
+
+@media (min-width: 500px) {
+
+  .subject-detail-main img {
+    display: block;
+    padding-top: 10px;
+    height: 250px;
+    width: 250px;
+  }
 }
 
 .subject-detail-main decklist {
-
+  padding: 10px;
 }
 
 .subject-detail-main h5 {
@@ -37,12 +36,8 @@
 }
 
 .subject-detail-main .deck {
-  display: block;
-  padding: 20px;
-  border-bottom: 1px solid grey;
+
 }
 
 .subject-detail-main .deck:first-child {
-  border-top: 2px solid grey;
-
 }
