--- a/app/assets/stylesheets/subject_detail.css
+++ b/app/assets/stylesheets/subject_detail.css
@@ -1,8 +1,10 @@
 .subject-detail-main {
+  background: #ebf9f9;
+  border-radius: 10px;
   float: left;
   width: 50%;
   border-right: 1px solid #ccc;
-  margin: 10px;
+  padding: 10px;
 }
 
 .subject-detail-main .title {
