--- a/app/assets/stylesheets/subject_nav.css
+++ b/app/assets/stylesheets/subject_nav.css
@@ -62,7 +62,7 @@
     border-radius: 10px;
     width: 80%;
     font-size: 12px;
-    /*margin: auto;*/
+    margin: auto;
   }
 
   .subject-nav-form > h1 {
