--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -23,6 +23,7 @@
    display: block;
    /*width: 155px;*/
    padding: 19px 20px;
+   width: 60px;
  }
 
 .header-list { display: none; }
@@ -48,7 +49,7 @@
 
 .header-begin {
   float: left;
-  margin: 30px 30px;
+  margin: 20px 30px;
   display: block;
 }
 
