--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
 </head>
 <body>
 
+  <script>
+    window.images = {
+      logo: "<%= image_path("logo.png") %>"
+    }
+  </script>
 
   <%= render "layouts/errors" %>
 
