--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -67,6 +67,7 @@
 
 .home-signup .password {
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .home-signup input {
@@ -105,10 +106,12 @@
 
 .home-login .username {
   padding-top: 10px;
+  padding-bottom: 5px;
 }
 
 .home-login .password {
   padding-top: 10px;
+  padding-bottom: 15px;
 }
 
 .home-login input {
