--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <script>
     window.images = {
-      logo: "<%= image_path("logo.png") %>"
+      logo: "<%= image_path("logo.png") %>",
+      check: "<%= image_path("sign-check-icon.png") %>"
     }
   </script>
 
