--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -3,13 +3,15 @@
  .header {
    background: black;
    font-size: 14px;
+   /*color: #999;*/
+   font-size: 14px;
  }
 
- .header > a {
+ .header a {
    color: grey;
  }
 
- .header > a:hover {
+ .header a:hover {
    color: white;
  }
 
