--- a/app/assets/stylesheets/log_in_page.scss
+++ b/app/assets/stylesheets/log_in_page.scss
@@ -1,5 +1,6 @@
 .background {
-  background: image-url("background.jpeg") no-repeat;
+  // background: image-url("background.jpg") no-repeat;
+  background: url("https://images.unsplash.com/reserve/8S64npOgTu2eWTZIXEfy_DSC_0955.JPG");
   background-size: cover;
   background-position: 25% 75%;
   height: 900px;
