Style CardFlip Animation. Fix minor bugs.

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -1,6 +1,6 @@
 .background {
   // background: asset_path("background.jpg") no-repeat;
-  background: url("https://images.unsplash.com/reserve/8S64npOgTu2eWTZIXEfy_DSC_0955.JPG");
+  background: url("https://images.unsplash.com/reserve/8S64npOgTu2eWTZIXEfy_DSC_0955.JPG?crop=entropy&fit=crop&fm=jpg&h=725&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1200");
   background-size: cover;
   background-position: 25% 75%;
   height: 900px;
