--- a/app/assets/stylesheets/study_show.css
+++ b/app/assets/stylesheets/study_show.css
@@ -89,11 +89,13 @@
 /*STUDY SHOW MAIN*/
 
 .study-show-main {
+  width: 700px;
   position: relative;
-  left: 315px;
+  left: 0;
   right: 0;
   bottom: 0;
   top: 0;
+  margin: auto;
 }
 
 .flashcard {
