--- a/app/assets/stylesheets/homepage_animation.css
+++ b/app/assets/stylesheets/homepage_animation.css
@@ -4,9 +4,13 @@
 	perspective: 1000;
 }
 	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
+.toggle-login {
+	transform: rotateY(180deg);
+}
+
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+	transform: rotateY(180deg);
+}
 
 .flip-container, .front, .back {
 	/*width: 520px;*/
