--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -7,6 +7,7 @@
 }
 
 .welcome {
+  font-family: 'Poppins', sans-serif;
   width: 300px;
   position: relative;
   top: 30%;
@@ -23,6 +24,7 @@
 }
 
 .welcome h2 {
+  padding: 10px;
   margin: auto;
   width: 200px;
   font-size: 13px;
