--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Links</title>
+  <title>BrainSTAX</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link
     rel="stylesheet"
