--- a/app/assets/stylesheets/study_show_animation.css
+++ b/app/assets/stylesheets/study_show_animation.css
@@ -1,5 +1,4 @@
 .flashcard {
-
 	perspective: 1000;
 }
 	/* flip the pane when hovered */
@@ -8,36 +7,38 @@
 	}
 
 .flashcard, .cardfront, .cardback {
-	/*width: 520px;*/
-  width: 560px;
-	height: 400px;
+	width: 100%;
+	height: 100%;
+	min-height: 400px;
+	min-width: 600px;
+	max-width: 600px;
 }
 
 /* flip speed goes here */
 .card-flipper {
 	transition: 0.6s;
 	transform-style: preserve-3d;
-	position: relative;
 }
 
 /* hide cardback of pane during swap */
 .cardfront {
-  background: #fcd9e7;
-  border-radius: 10px;
+  background: #ffffff;
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
 	backface-visibility: hidden;
 	position: absolute;
 	top: 0;
 	left: 0;
+	width: 85%
 }
 
 .cardback {
-  background: #fde7f0;
-  border-radius: 10px;
+  background: #ffffff;
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.25);
 	backface-visibility: hidden;
-
 	position: absolute;
 	top: 0;
 	left: 0;
+	width: 85%
 }
 
 /* cardfront pane, placed above cardback */
@@ -50,4 +51,38 @@
 /* cardback, initially hidden pane */
 .cardback {
 	transform: rotateY(180deg);
+}
+
+@media (max-width: 900px) {
+	.rating-container, .cardfront, .cardback  {
+		width: 94%;
+		min-width: 360px;
+	}
+
+	.cardback {
+		left: 10%;
+	}
+}
+
+@media (max-width: 845px) {
+	.rating-container, .flashcard, .cardfront, .cardback  {
+		width: 90%;
+		max-width: 900px;
+		min-width: 360px;
+	}
+
+	.cardback {
+		left: 10%;
+	}
+
+	.rating-container {
+		width: 100%;
+	}
+
+}
+
+@media (max-width: 420px) {
+	.cardback {
+		left: 0%;
+	}
 }
