--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -92,9 +92,9 @@
 .user-header-logo {
   float: left;
   display: block;
-  /*width: 155px;*/
-  padding: 19px 20px;
-  width: 60px;
+  padding: 19px 0 19px 19px;
+  width: 80%;
+  max-width: 60px;
 }
 
 .user-header-list {
@@ -118,13 +118,12 @@
 .user-header-profile {
   float: right;
   display: block;
-
 }
 
 .user-header-profile > h3{
   float: left;
   color: white;
-  margin: 30px 20px;
+  margin: 30px 10px;
 
 }
 
@@ -137,6 +136,7 @@
   float: left;
   border-radius: 50%;
   margin: 10px 10px auto auto;
-  height: 58px;
-  width: 58px;
+  width: 70%;
+  max-height: 58px;
+  max-width: 58px;
 }
