Implement sample deck. Need to change sample to StarWars Trivia.

--- a/app/assets/stylesheets/study_show.css
+++ b/app/assets/stylesheets/study_show.css
@@ -140,6 +140,10 @@
   color: white;
 }
 
+.add-card-form button:disabled {
+  background: grey;
+}
+
 .add-card-form input {
   padding: 10px;
   margin: auto;
