--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
-    <link href="/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="<%=asset_path("favicon.ico") %>" rel="shortcut icon" type="image/x-icon" />
   <%= csrf_meta_tags %>
 </head>
 <body>
