--- a/app/assets/stylesheets/homepage_animation.css
+++ b/app/assets/stylesheets/homepage_animation.css
@@ -8,9 +8,10 @@
 	transform: rotateY(180deg);
 }
 
-.flip-container:hover .flipper, .flip-container.hover .flipper {
+/*uncomment this for flip animation*/
+/*.flip-container:hover .flipper, .flip-container.hover .flipper {
 	transform: rotateY(180deg);
-}
+}*/
 
 .flip-container, .front, .back {
 	/*width: 520px;*/
